--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <script type="text/javascript" src="https://delivered-by-madington.com/streamedby/2.0/streamedby.js"></script>
     <script
-        src="https://delivered-by-madington.com/messenger/messenger.js?api_key=c9fdbe18-4a10-4444-9003-60e80ebb5442"></script>
+        src="https://delivered-by-madington.com/messenger/messenger.js"></script>
 </head>
 
 <body>
